--- a/dot_config/Brewfile
+++ b/dot_config/Brewfile
@@ -5,30 +5,29 @@ tap "homebrew/services"
 tap "koekeishiya/formulae"
 
 brew "bat"
+brew "chezmoi"
+brew "cocoapods"
 brew "eza"
-brew "fzf"
 brew "gh"
+brew "git"
+brew "gnupg"
+brew "hydra"
+brew "mise"
 brew "neofetch"
+brew "pinentry-mac"
 brew "sheldon"
-brew "starship" 
+brew "starship"
 brew "tree"
+brew "typst"
+brew "koekeishiya/formulae/skhd"
+brew "koekeishiya/formulae/yabai"
 
-brew "chezmoi" # macのみ
-brew "cloudflared" # macのみ
-brew "git" # macのみ
-brew "gnupg" # macのみ
-brew "hydra" # macのみ
-brew "pinentry-mac" # macのみ
-brew "rtx" # macのみ
-brew "skhd" # macのみ
-brew "yabai" # macのみ
-
-cask "alacritty" 
+cask "alacritty"
+cask "android-platform-tools"
 cask "arc"
 cask "canva"
 cask "discord"
 cask "figma"
-cask "flutter"
 cask "font-jetbrains-mono-nerd-font"
 cask "ghidra"
 cask "gpg-suite"
@@ -37,25 +36,32 @@ cask "keybase"
 cask "notion"
 cask "orbstack"
 cask "raycast"
+cask "slack"
 cask "typora"
 cask "visual-studio-code"
+cask "xquartz"
 
-vscode "amazonwebservices.codewhisperer-for-command-line-companion"
+vscode "adam-bender.commit-message-editor"
 vscode "eamodio.gitlens"
-vscode "GitHub.copilot"
-vscode "GitHub.copilot-chat"
-vscode "GitHub.github-vscode-theme"
-vscode "LeonardSSH.vscord"
+vscode "github.codespaces"
+vscode "github.copilot"
+vscode "github.copilot-chat"
+vscode "github.github-vscode-theme"
+vscode "github.vscode-github-actions"
+vscode "github.vscode-pull-request-github"
+vscode "leonardssh.vscord"
 vscode "ms-azuretools.vscode-docker"
-vscode "MS-CEINTL.vscode-language-pack-ja"
-vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-ceintl.vscode-language-pack-ja"
 vscode "ms-vscode-remote.remote-containers"
 vscode "ms-vscode-remote.remote-ssh"
 vscode "ms-vscode-remote.remote-ssh-edit"
 vscode "ms-vscode.remote-explorer"
 vscode "ms-vscode.remote-server"
+vscode "nvarner.typst-lsp"
 vscode "oderwat.indent-rainbow"
-vscode "PKief.material-icon-theme"
+vscode "pkief.material-icon-theme"
+vscode "rangav.vscode-thunder-client"
+vscode "ritwickdey.liveserver"
 vscode "rust-lang.rust-analyzer"
-vscode "seatonjiang.gitmoji-vscode"
 vscode "tamasfe.even-better-toml"
+vscode "usernamehw.errorlens"
