--- a/dot_config/sheldon/plugins.toml
+++ b/dot_config/sheldon/plugins.toml
@@ -1,32 +1,28 @@
+shell = "zsh"
+
 [plugins]
 
 # 遅延読み込み
 [plugins.zsh-defer]
-github = "romkatv/zsh-defer"
+  github = "romkatv/zsh-defer"
 
 # 履歴補完
 [plugins.zsh-autosuggestions]
-github = "zsh-users/zsh-autosuggestions"
-apply = ["defer"]
+  apply  = ["defer"]
+  github = "zsh-users/zsh-autosuggestions"
 
 # 補完
 [plugins.zsh-completions]
-github = "zsh-users/zsh-completions"
-apply = ["defer"]
+  apply  = ["defer"]
+  github = "zsh-users/zsh-completions"
 
 # ハイライト
-# [plugins.zsh-syntax-highlighting]
-# github = "zsh-users/zsh-syntax-highlighting"
+[plugins.zsh-syntax-highlighting]
+  github = "zsh-users/zsh-syntax-highlighting"
 
 # 構文ハイライト
 [plugins.fast-syntax-highlighting]
-github = "zdharma/fast-syntax-highlighting"
-
-# zeno.zsh
-[plugins.zeno]
-github = "yuki-yano/zeno.zsh"
-use = ['{{ name }}-plugin.zsh']
-apply = ["defer"]
+  github = "zdharma/fast-syntax-highlighting"
 
 [templates]
-defer = "{% for file in files %}zsh-defer source \"{{ file }}\"\n{% endfor %}"
+  defer = "{% for file in files %}zsh-defer source \"{{ file }}\"\n{% endfor %}"
