add: コマンドラインツールの追加

--- a/dot_config/Brewfile
+++ b/dot_config/Brewfile
@@ -8,6 +8,8 @@ brew "bat"
 brew "chezmoi"
 brew "cocoapods"
 brew "eza"
+brew "fd"
+brew "genact"
 brew "gh"
 brew "git"
 brew "gnupg"
@@ -19,6 +21,7 @@ brew "sheldon"
 brew "starship"
 brew "tree"
 brew "typst"
+brew "xh"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
 
@@ -33,6 +36,7 @@ cask "ghidra"
 cask "gpg-suite"
 cask "karabiner-elements"
 cask "keybase"
+cask "ltspice"
 cask "notion"
 cask "orbstack"
 cask "raycast"
